# BillPouch

./: .clinerules  .cursorrules  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.playground  README.md  cliff.toml  deny.toml  docker-compose.acceptance.yml  docker-compose.chaos.yml  docker-compose.playground.yml  docker-compose.smoke.yml  playground.ps1  playground.sh  release-please-config.json
.github/: copilot-instructions.md
.github/workflows/: acceptance.yml  bench.yml  chaos.yml  ci.yml  commitlint.yml  compat.yml  coverage.yml  docker.yml  docs.yml  drift.yml  protocol-fuzz.yml  release-please.yml  release.yml  security.yml  smoke.yml
agents/acceptance/: scenarios.sh
agents/chaos/: run_chaos.sh
agents/drift/: check_drift.sh
agents/lib/: assert.sh
agents/protocol/: fuzz_control.sh
crates/bp-api/: Cargo.toml
crates/bp-api/src/: main.rs
crates/bp-api/static/: index.html
crates/bp-cli/: Cargo.toml  README.md
crates/bp-cli/src/: client.rs  main.rs
crates/bp-cli/src/commands/: auth.rs  bootstrap.rs  farewell.rs  flock.rs  get.rs  hatch.rs  invite.rs  join.rs  leave.rs  ls.rs  marketplace.rs  mod.rs  pause.rs  put.rs  relay.rs  status.rs  storage.rs
crates/bp-core/: Cargo.toml  README.md
crates/bp-core/benches/: coding.rs
crates/bp-core/src/: config.rs  daemon.rs  error.rs  identity.rs  invite.rs  lib.rs  service.rs
crates/bp-core/src/coding/: gf256.rs  mod.rs  params.rs  rlnc.rs
crates/bp-core/src/control/: mod.rs  protocol.rs  server.rs
crates/bp-core/src/network/: behaviour.rs  bootstrap.rs  fragment_gossip.rs  kad_store.rs  mod.rs  qos.rs  quality_monitor.rs  reputation.rs  state.rs
crates/bp-core/src/storage/: agreement.rs  encryption.rs  file_registry.rs  fragment.rs  manifest.rs  meta.rs  mod.rs  tier.rs
crates/bp-core/tests/: architecture_test.rs  integration_test.rs
docs/: index.html
mcp/: package-lock.json  package.json
mcp/src/: index.ts
playground/: entrypoint.sh
smoke/: entrypoint.sh  smoke-test.sh
wiki/: 00-project-document.md  01-overview.md  02-architecture.md  03-technologies.md  04-services.md  05-control-protocol.md  06-nodeinfo-gossip.md  07-identity-security.md  08-cli-reference.md  09-testing.md  10-cicd-devops.md  11-docker-playground.md  12-status-roadmap.md  13-use-cases.md  14-storage-bidding.md  15-erasure-coding.md  16-network-quality.md  17-rest-api.md  README.md
