[package]
name    = "bp-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bp-api"
path = "src/main.rs"

[dependencies]
bp-core    = { path = "../bp-core" }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }

axum               = "0.7"
base64             = "0.22"
clap               = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
