[package]
name    = "bp-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
directories = { workspace = true }

libp2p = { version = "0.54", features = [
    "gossipsub",
    "kad",
    "noise",
    "yamux",
    "tcp",
    "identify",
    "mdns",
    "macros",
    "tokio",
    "ed25519",
] }

sha2    = "0.10"
hex     = "0.4"
futures = "0.3"
