[package]
name    = "bp-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
directories = { workspace = true }

libp2p = { version = "0.54", features = [
    "gossipsub",
    "kad",
    "noise",
    "yamux",
    "tcp",
    "identify",
    "mdns",
    "macros",
    "tokio",
    "ed25519",
    "request-response",
    "cbor",
    "autonat",
    "relay",
    "dns",
] }

sha2    = "0.10"
hex     = "0.4"
blake3  = "1"
rand    = "0.8"
futures = "0.3"
argon2  = "0.5"
chacha20poly1305 = "0.10"

[dev-dependencies]
tokio = { workspace = true }
uuid  = { workspace = true }
